# Terrific

./: .gitignore  .gitmodules  .lvimrc  CMakeLists.txt  build.bat  build.sh
include/: include.rar
libs/x86/SFML/Debug/: sfml-audio-d-2.ilk  sfml-audio-d.exp  sfml-graphics-d-2.ilk  sfml-graphics-d.exp  sfml-network-d-2.ilk  sfml-network-d.exp  sfml-system-d-2.ilk  sfml-system-d.exp  sfml-window-d-2.ilk  sfml-window-d.exp
libs/x86/SFML/Release/: sfml-audio.exp  sfml-graphics.exp  sfml-network.exp  sfml-system.exp  sfml-window.exp
misc/: shell.bat  startup.bat
src/: CMakeLists.txt  src.rar  test.cpp  win32_terrific.cpp
